fix(horizontalPage): setting options overflow

--- a/src/pages/Horizontal/Horizontal.module.css
+++ b/src/pages/Horizontal/Horizontal.module.css
@@ -1,16 +1,17 @@
-.settingsBody {
-    width: 75vw;
-    height: 75vh;
-    position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-    position: absolute;
+.horizontalPage{
+    width:100vw;
+    height:100vh;
+    padding:0;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    font-size:initial;
+}
 
-    font-size: 2rem;
-    font-family: var(--font-family);
-    font-weight: var(--font-weight);
-    gap: 23px;
+.settingsBody {
+    width:75%;
+    height: 75%;
 }
 
 .sidebar {
@@ -36,7 +37,8 @@
     background-color: var(--bg-color-dark);
 
     width: auto;
-    height: 75%;
+    height: 90%;
+    overflow-y: scroll;
 
     flex-grow: 1;
 }
